--- a/dad-jokes/src/App.css
+++ b/dad-jokes/src/App.css
@@ -72,11 +72,14 @@ input {
   align-items: center;
 }
 Button {
-  margin-top: 10px;
+  margin: 10px;
   padding: 15px 22px;
   border-radius: 14px;
   background-color: lightgrey;
   color: white;
 }
 
+/* .text-center.card.card-body{
+  border-color: red;
+} */
 
